test/scc_test/exp/semantic-errors/027.a
027.t:3:12: error: operand of sizeof may not be a function